--- a/rules/Rakefile
+++ b/rules/Rakefile
@@ -6,6 +6,9 @@ task :json do
   File.open('rules.json', 'w') do |f|
     f.puts JSON.pretty_generate(Psych.load(File.read('rules.yml')))
   end
+  File.open('gender.json', 'w') do |f|
+    f.puts JSON.pretty_generate(Psych.load(File.read('gender.yml')))
+  end
 end
 
 task :default => :json
