Исправляет код-стайл

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "homepage": "https://github.com/slowprog/petrovich-php",
     "license": "MIT",
     "require": {
-        "php": ">=5.3"
+        "php" : ">=5.3",
+        "ext-mbstring" : "*"
     },
     "autoload": {
         "files": ["Petrovich.php"]
