--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "license": "MIT",
     "require": {
         "php" : ">=5.3",
-        "ext-mbstring" : "*"
+        "ext-mbstring" : "*",
+        "ext-json" : "*"
     },
     "autoload": {
         "files": ["Petrovich.php"]
